--- a/templates/home/dairy.html
+++ b/templates/home/dairy.html
@@ -6,7 +6,6 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
 	<!-- Author Meta -->
 	<meta name="author" content="codepixer">
 	<!-- Meta Description -->
@@ -22,6 +21,7 @@
 	<!--
 			CSS
 			============================================= -->
+        <link rel="shortcut icon" href="{% static '/img/login.ico' %}" />
 	<link rel="stylesheet" href="{% static 'css/linearicons.css' %}">
 	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
