--- a/templates/my_admin/login.html
+++ b/templates/my_admin/login.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>unfolder后端管理端</title>
+        <link rel="shortcut icon" href="{% static '/img/login.ico' %}" />
 	<link type="text/css" href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link type="text/css" href="{% static 'css/bootstrap/bootstrap-responsive.min.css' %}" rel="stylesheet">
     <link type="text/css" href="{% static 'css/theme.css' %}" rel="stylesheet">
