--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Unfolder用户DEMO</title>
-
+    <link rel="shortcut icon" href="{% static '/img/login.ico' %}" />
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/reset.css' %}">
 <link rel="stylesheet" href="{% static 'css/htmleaf-demo.css' %}">
@@ -16,21 +16,21 @@
 
 </head>
 <body>
-<div class="top-bar">
-	<div class="container">
-		<ul class="top-contacts">
-			<li class="top-unhover"><p><span class="fa fa-phone-square" aria-hidden="true"></span> +1 515 151515</p>
-			</li><li class="top-hover"><p><span class="fa fa-envelope" aria-hidden="true"></span> <a href="mailto:support@company.com">support@company.com</a></p>
-		</li></ul>
-		<ul class="top-links">
-			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-		</ul>
-		<div class="clearfix"></div>
-	</div>
-</div>
+{#<div class="top-bar">#}
+{#	<div class="container">#}
+{#		<ul class="top-contacts">#}
+{#			<li class="top-unhover"><p><span class="fa fa-phone-square" aria-hidden="true"></span> +1 515 151515</p>#}
+{#			</li><li class="top-hover"><p><span class="fa fa-envelope" aria-hidden="true"></span> <a href="mailto:support@company.com">support@company.com</a></p>#}
+{#		</li></ul>#}
+{#		<ul class="top-links">#}
+{#			<li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+{#			<li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+{#			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
+{#			<li><a href="#"><i class="fa fa-google-plus"></i></a></li>#}
+{#		</ul>#}
+{#		<div class="clearfix"></div>#}
+{#	</div>#}
+{#</div>#}
 <header class="cd-main-header animate-search">
 	<div class="cd-logo"><a href="/service/"><img src="{% static 'img/logo.png' %}" alt="Logo"></a></div>
 
@@ -71,9 +71,10 @@
 			</li>
 		</ul>
 		<ul class="cd-main-nav">
-			<li><a href= "#">店铺</a></li>
-			<li><a href="#">目的地</a></li>
-			<li><a href="#">Blog</a></li>
+			<li><a href= "#">美食</a></li>
+			<li><a href="#">电影</a></li>
+			<li><a href="#">公益</a></li>
+			<li><a href="/service/merchant/regist/">商家入驻</a></li>
 			<li style="background-color: #5c5d6a"><a data-toggle="modal" href="#login1" data-target="#login1" style="color: white">登陆</a></li>
 			<li  style="background-color: #5c5d6a"><a data-toggle="modal" href="#regist1" data-target="#regist1" style="color: white">注册</a></li>
 		</ul> <!-- .cd-main-nav -->
@@ -142,23 +143,23 @@
 <section id="sort" style="margin-top: 400px;">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
-				<div class="whitebox" style="padding: 0;">
-					<div class="boxheader" style="border-top-right-radius: 5px; border-top-left-radius: 5px;background-color:#fde0a3"><img src="{% static 'img/icon/food.png' %}" style=" vertical-align: middle;"><span class="boxheadertext">美食</span><a>全部 ></a></div>
-					<div class="boxmodal">
+            <div class="col-md-6">
+                <div class="whitebox" style="padding: 0;">
+                    <div class="boxheader" style="border-top-right-radius: 5px; border-top-left-radius: 5px;background-color:#fde0a3"><img src="{% static 'img/icon/food.png' %}" style=" vertical-align: middle;"><span class="boxheadertext">美食</span><a>全部 ></a></div>
+                    <div class="boxmodal">
                         {% for line in shopsfood %}
                             {% if line.code1.city.city == city %}
                                 {% if forloop.counter <= 6 %}
-						<div class="boxelment">
-							<div class="shops">
-								<a href="/service/shop/{{ line.code1.shop_num }}.html">
-									<img src="/static/{{ line.code1.pic }}">
-								</a>
-								<div class="shops-tag">
-									<a href="/service/shop/{{ line.code1.shop_num }}.html"><h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">{{ line.code1.shop_name }}</h3></a>
-									<div class="star-info">
-										<span class="star star-50"></span>
-                                    <span class="comment">
+                                    <div class="boxelment">
+                                        <div class="shops">
+                                            <a href="/service/shop/{{ line.code1.shop_num }}.html">
+                                                <img src="/static/{{ line.code1.pic }}">
+                                            </a>
+                                            <div class="shops-tag">
+                                                <a href="/service/shop/{{ line.code1.shop_num }}.html"><h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">{{ line.code1.shop_name }}</h3></a>
+                                                <div class="star-info">
+                                                    <span class="star star-50"></span>
+                                                    <span class="comment">
                                         {% for x in shopmessage %}
                                             {% if x.code5.shop_num == line.code1.shop_num %}
                                                 {% if forloop.last %}{{ forloop.counter }}
@@ -168,43 +169,43 @@
                                                 {% endif %}
                                             {% endif %}
                                         {% endfor %}
-                                    条点评</span>
-									</div>
-									<div class="area-info">
-										<span class="region-name" style="float: right">{{ line.code1.city.field_region }}</span>
-										<span class="maincate-name">
+                                                        条点评</span>
+                                                </div>
+                                                <div class="area-info">
+                                                    <span class="region-name" style="float: right">{{ line.code1.city.field_region }}</span>
+                                                    <span class="maincate-name">
                                             {{ line.tag_num.cat_detaill_name }}
                                         </span>
-									</div>
-									<div class="avg">
-										<span>{{ line.code1.shop_average_price }}元/人</span>
-									</div>
-								</div>
-							</div>
-						</div>
-                                    {% endif %}
+                                                </div>
+                                                <div class="avg">
+                                                    <span>{{ line.code1.shop_average_price }}元/人</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endif %}
                             {% endif %}
                         {% endfor %}
-					</div>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="whitebox" style="padding: 0">
-					<div class="boxheader" style="border-top-right-radius: 5px; border-top-left-radius: 5px;background-color:#e8caff"><img src="{% static 'img/icon/happy.png' %}" style=" vertical-align: middle;"><span class="boxheadertext">休闲娱乐</span><a>全部 ></a></div>
-					<div class="boxmodal">
-						{% for line in shopssport %}
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="whitebox" style="padding: 0">
+                    <div class="boxheader" style="border-top-right-radius: 5px; border-top-left-radius: 5px;background-color:#e8caff"><img src="{% static 'img/icon/happy.png' %}" style=" vertical-align: middle;"><span class="boxheadertext">休闲娱乐</span><a>全部 ></a></div>
+                    <div class="boxmodal">
+                        {% for line in shopssport %}
                             {% if line.code1.city.city == city %}
                                 {% if forloop.counter <= 6 %}
-						<div class="boxelment">
-							<div class="shops">
-								<a href="/service/shop/{{ line.code1.shop_num }}.html">
-									<img src="/static/{{ line.code1.pic }}">
-								</a>
-								<div class="shops-tag">
-									<a href="/service/shop/{{ line.code1.shop_num }}.html"><h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">{{ line.code1.shop_name }}</h3></a>
-									<div class="star-info">
-										<span class="star star-50"></span>
-                                    <span class="comment">
+                                    <div class="boxelment">
+                                        <div class="shops">
+                                            <a href="/service/shop/{{ line.code1.shop_num }}.html">
+                                                <img src="/static/{{ line.code1.pic }}">
+                                            </a>
+                                            <div class="shops-tag">
+                                                <a href="/service/shop/{{ line.code1.shop_num }}.html"><h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">{{ line.code1.shop_name }}</h3></a>
+                                                <div class="star-info">
+                                                    <span class="star star-50"></span>
+                                                    <span class="comment">
                                         {% for x in shopmessage %}
                                             {% if x.code5.shop_num == line.code1.shop_num %}
                                                 {% if forloop.last %}{{ forloop.counter }}
@@ -214,44 +215,130 @@
                                                 {% endif %}
                                             {% endif %}
                                         {% endfor %}
-                                    条点评</span>
-									</div>
-									<div class="area-info">
-										<span class="region-name" style="float: right;">{{ line.code1.city.field_region }}</span>
-										<span class="maincate-name">
+                                                        条点评</span>
+                                                </div>
+                                                <div class="area-info">
+                                                    <span class="region-name" style="float: right;">{{ line.code1.city.field_region }}</span>
+                                                    <span class="maincate-name">
                                             {{ line.tag_num.cat_detaill_name }}
                                         </span>
-									</div>
-									<div class="avg">
-										<span>{{ line.code1.shop_average_price }}元/人</span>
-									</div>
-								</div>
-							</div>
-						</div>
-                                    {% endif %}
+                                                </div>
+                                                <div class="avg">
+                                                    <span>{{ line.code1.shop_average_price }}元/人</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endif %}
                             {% endif %}
                         {% endfor %}
-					</div>
-				</div>
-			</div>
-        <div class="col-md-12" style="margin-top: 20px">
-            <div class="whitebox" style="padding: 0">
-            <div class="boxheader" style="border-top-right-radius: 5px; border-top-left-radius: 5px;background: linear-gradient(to right, rgb(250, 60, 104) 2%, rgb(254, 70, 77) 97%) rgb(250, 60, 104);    line-height: 45px;"><span class="boxheadertext" style="margin-left: 20px">电影</span><ul><li><a>正在热映</a></li><li><a>即将上映</a></li></ul></div>
-            <div class="lunbo">
-
-   <ul class="vmcarousel-centered-infitine vmc-centered">
-        {% for y in film %}
-		<li><img alt="" src="/static/{{ y.film_pic }}" /><div class="film-info"><p class="film-score">{% if y.film_prade != 0 %}<b>观众评  <span>{{ y.film_prade }}</span></b>{% else %}<b><span>{{ y.film_like }}</span>  想看</b>{% endif %}</p><p class="film-name">{{ y.film_name }}</p><span class="buy-ticket"><a>购票</a></span></div></li>
-        {% endfor %}
-   </ul>
-
+                    </div>
+                </div>
             </div>
+            <div class="col-md-12" style="margin-top: 20px">
+                <div class="whitebox" style="padding: 0">
+                    <div class="boxheader" style="border-top-right-radius: 5px; border-top-left-radius: 5px;background: linear-gradient(to right, rgb(250, 60, 104) 2%, rgb(254, 70, 77) 97%) rgb(250, 60, 104);    line-height: 45px;"><span class="boxheadertext" style="margin-left: 20px">电影</span><ul><li><a>正在热映</a></li><li><a>即将上映</a></li></ul></div>
+                    <div class="lunbo">
+
+                        <ul class="vmcarousel-centered-infitine vmc-centered">
+                            {% for y in film %}
+                                <li><img alt="" src="/static/{{ y.film_pic }}" /><div class="film-info"><p class="film-score">{% if y.film_prade != 0 %}<b>观众评  <span>{{ y.film_prade }}</span></b>{% else %}<b><span>{{ y.film_like }}</span>  想看</b>{% endif %}</p><p class="film-name">{{ y.film_name }}</p><span class="buy-ticket"><a>购票</a></span></div></li>
+                            {% endfor %}
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+            <div  class="col-md-12" style="margin-top: 25px">
+                <div class="whitebox" style="padding: 0;     margin-bottom: 30px;">
+                    <div class="boxheader" style="border-top-right-radius: 5px; border-top-left-radius: 5px;background-color:#57f89b"><img src="{% static 'img/icon/food.png' %}" style=" vertical-align: middle;"><span class="boxheadertext">猜你喜欢</span><a>全部 ></a></div>
+                    <div class="boxmodal">
+                        {% for line in shopsfood %}
+                            {% if line.code1.city.city == city %}
+                                {% if forloop.counter <= 6 %}
+                                    <div class="boxelment">
+                                        <div class="shops">
+                                            <a href="/service/shop/{{ line.code1.shop_num }}.html">
+                                                <img src="/static/{{ line.code1.pic }}">
+                                            </a>
+                                            <div class="shops-tag">
+                                                <a href="/service/shop/{{ line.code1.shop_num }}.html"><h3 style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">{{ line.code1.shop_name }}</h3></a>
+                                                <div class="star-info">
+                                                    <span class="star star-50"></span>
+                                                    <span class="comment">
+                                        {% for x in shopmessage %}
+                                            {% if x.code5.shop_num == line.code1.shop_num %}
+                                                {% if forloop.last %}{{ forloop.counter }}
+                                                {% endif %}
+                                            {% else %}
+                                                {% if forloop.first %}0
+                                                {% endif %}
+                                            {% endif %}
+                                        {% endfor %}
+                                                        条点评</span>
+                                                </div>
+                                                <div class="area-info">
+                                                    <span class="region-name" style="float: right">{{ line.code1.city.field_region }}</span>
+                                                    <span class="maincate-name">
+                                            {{ line.tag_num.cat_detaill_name }}
+                                        </span>
+                                                </div>
+                                                <div class="avg">
+                                                    <span>{{ line.code1.shop_average_price }}元/人</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
-		</div>
-	</div>
+    </div>
 </section>
+<footer class="footer-area section-gap">
+		<div class="container" style="    padding: 40px 45px;    border-top: 1px solid #E5E5E5;    border-bottom: 1px solid #E5E5E5;">
+			<div class="row">
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>用户帮助</h4>
+					<ul>
+						<li><a href="#">常见问题</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>基于主要API</h4>
+					<ul>
+						<li><a href="https://lbs.amap.com/">高得地图API</a></li>
+						<li><a href="https://echarts.baidu.com/">Echarts</a></li>
+						<li><a href="https://ueditor.baidu.com/">Ueditor</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>商家合作</h4>
+					<ul>
+						<li><a href="#">美食商家入住</a></li>
+						<li><a href="#">境内景点商家入住</a></li>
+						<li><a href="#">综合商家入住</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>联系我们</h4>
+					<ul>
+						<li><a href="mailto:1206758827@qq.com">廉政邮箱</a></li>
+					</ul>
+				</div>
 
+				<div class="col-lg-4 col-md-6 single-footer-widget">
+					<h4>公司信息</h4>
+                    <ul>
+						<li><a href="/">关于我们</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 <div id="search" class="cd-main-search">
 	<form action="{% url 'search1' %}" method="POST" >
         {% csrf_token %}
@@ -435,6 +522,8 @@
             resizeEnable: true,
             zoom: 15
     });
+
+
         var options = {
             'showButton': true,//是否显示定位按钮
             'buttonPosition': 'LB',//定位按钮的位置
@@ -483,6 +572,7 @@
         alert("定位失败！")
     }
     })
+
 </script>
 
 
