--- a/templates/demo/map.html
+++ b/templates/demo/map.html
@@ -7,12 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Unfolder用户DEMO</title>
 <link href='https://fonts.useso.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="{% static '/img/login.ico' %}" />
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/reset.css' %}">
 <link rel="stylesheet" href="{% static 'css/htmleaf-demo.css' %}">
 <link rel="stylesheet" href="{% static 'css/swiper.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/style3.css' %}">
 <link rel="stylesheet" href="{% static 'css/login3.css' %}">
+<link rel="stylesheet" href="{% static 'css/chinaz.css' %}">
     <style>
             #panel {
         position: fixed;
@@ -31,21 +33,6 @@
 
 </head>
 <body>
-<div class="top-bar">
-	<div class="container">
-		<ul class="top-contacts">
-			<li class="top-unhover"><p><span class="fa fa-phone-square" aria-hidden="true"></span> +1 515 151515</p>
-			</li><li class="top-hover"><p><span class="fa fa-envelope" aria-hidden="true"></span> <a href="mailto:support@company.com">support@company.com</a></p>
-		</li></ul>
-		<ul class="top-links">
-			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-		</ul>
-		<div class="clearfix"></div>
-	</div>
-</div>
 <header class="cd-main-header animate-search">
 	<div class="cd-logo"><a href="/service/"><img src="{% static 'img/logo.png' %}" alt="Logo"></a></div>
 
@@ -86,9 +73,10 @@
 			</li>
 		</ul>
 		<ul class="cd-main-nav">
-			<li><a href= "#">店铺</a></li>
-			<li><a href="#">目的地</a></li>
-			<li><a href="#">Blog</a></li>
+			<li><a href= "#">美食</a></li>
+			<li><a href="#">电影</a></li>
+			<li><a href="#">公益</a></li>
+			<li><a href="/service/merchant/regist/">商家入驻</a></li>
 			<li style="background-color: #5c5d6a"><a data-toggle="modal" href="#login1" data-target="#login1" style="color: white">登陆</a></li>
 			<li  style="background-color: #5c5d6a"><a data-toggle="modal" href="#regist1" data-target="#regist1" style="color: white">注册</a></li>
 		</ul> <!-- .cd-main-nav -->
@@ -100,9 +88,21 @@
 </main>
 <div class="container">
 <div class="row">
-	<div class="whitebox" style="margin-top: 20px;">
-        <div style="height: 300px"><div id="allmap" style="width: 100%;height: 100%"></div></div>
-	<div id="timeline" class="timeline">
+	<div class="whitebox" style="margin-top: 20px">
+        <div class="col-sm-6"> <div style="height: 300px;    box-shadow: 0px 0px 25px 1px rgba(50, 50, 50, 0.1);"><div id="allmap" style="width: 100%;height: 100%"></div></div></div>
+       <div class="col-sm-6">
+           <div class="weather-card london">
+               <div class="weather-wrapper">
+           <div class="weather-icon sun"></div>
+           <h1>14º</h1>
+           <p>上海</p>
+           </div>
+               <div class="chart inline-legend grid">
+                   <div id="main1" style="height:400px;top: -130px"></div>
+               </div>
+           </div>
+       </div>
+	<div id="timeline" class="timeline" style="top:50px">
 		<button id="prev" class="prev">
 			<i class=""><img src="{% static 'img/icon_time_arrow_left.png' %}" alt=""></i>
 		</button>
@@ -202,10 +202,11 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+    </div>
 </div>
 </div>
 </div>
+
 
 <div id="page">
 	<a id="left-panel-link" href="#left-panel"><img src="{% static 'img/icon/mapicon.jpg' %}"></a>
@@ -316,11 +317,53 @@
 	</div><!-- /.modal -->
 </div>
 <div id="sad" style="width: 200px;height: 200px"><h1>sadas</h1></div>
+<footer class="footer-area section-gap">
+		<div class="container" style="    padding: 40px 45px;    border-top: 1px solid #E5E5E5;    border-bottom: 1px solid #E5E5E5;">
+			<div class="row">
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>用户帮助</h4>
+					<ul>
+						<li><a href="#">常见问题</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>基于主要API</h4>
+					<ul>
+						<li><a href="https://lbs.amap.com/">高得地图API</a></li>
+						<li><a href="https://echarts.baidu.com/">Echarts</a></li>
+						<li><a href="https://ueditor.baidu.com/">Ueditor</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>商家合作</h4>
+					<ul>
+						<li><a href="#">美食商家入住</a></li>
+						<li><a href="#">境内景点商家入住</a></li>
+						<li><a href="#">综合商家入住</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>联系我们</h4>
+					<ul>
+						<li><a href="mailto:1206758827@qq.com">廉政邮箱</a></li>
+					</ul>
+				</div>
+
+				<div class="col-lg-4 col-md-6 single-footer-widget">
+					<h4>公司信息</h4>
+                    <ul>
+						<li><a href="/">关于我们</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 <!--<div id='Login_start' style="position: absolute;" >-->
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="https://webapi.amap.com/maps?v=1.4.13&key=d137b3f7a39c6a29971ee376f76a80a9&plugin=AMap.PolyEditor"></script>
 <script src="https://webapi.amap.com/maps?v=1.4.13&key=d137b3f7a39c6a29971ee376f76a80a9&plugin=AMap.Walking"></script>
-    <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
+ <script src="{% static 'scripts/flot/echarts.min.js' %}" type="text/javascript"></script>
+<script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
 <script type="text/javascript">
 
     var map = new AMap.Map("allmap", {
@@ -440,7 +483,6 @@
 </script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/modernizr.js' %}"></script>
-
 <script type="text/javascript">
     //登录到注册
     $("#toRegist").on('click',function(){
@@ -482,10 +524,53 @@
         $("#login_WB").click(function(){
             alert("暂停使用！");
         });
+        var myChart = echarts.init(document.getElementById('main1'));
+        var option = {
+            tooltip: {
+                trigger: 'axis'
+            },
+            radar: [
+                {
+                    indicator: [
+                        {text: '精力', max: 100,color:"#333"},
+                        {text: '娱乐', max: 100,color:"#333"},
+                        {text: '饥饿', max: 100,color:"#333"},
+                        {text: '社交', max: 100,color:"#333"},
+                        {text: '明确', max: 100,color:"#333"}
+                    ],
+                    radius: 80,
+                    center: ['50%','60%'],
+                }
+            ],
+            series: [
+                {
+                    type: 'radar',
+                    data: [
+                        {
+                            value: [85, 90, 90, 95, 95],
+                            name: '人物状态'
+                        }
+                    ],
+                    itemStyle:{
+
+                     normal:{
+
+                        color:'#5CACEE'
+
+                    }}
+                }
+            ]
+        };
+         myChart.setOption(option);
+
+window.onresize = function() {
+
+    myChart.resize();
+
+}
     });
 </script>
 <script src="{% static 'js/main3.js' %}"></script> <!-- Resource jQuery -->
-
 <script src="{% static 'js/jquery.panelslider.js' %}" type="text/javascript"></script>
 <script>
     $('#left-panel-link').panelslider();
@@ -501,9 +586,12 @@
             startAt: 1,
             mousewheel:  'false'
         });
+
+
+        // 指定图表的配置项和数据
     });
 </script>
-        <script type="text/javascript">
+<script type="text/javascript">
 
         </script>
 </body>
